...
                            .scaledToFit()
                            .frame(width: 20, height: 20)
                            .onTapGesture {
                                publisher.updateItem(id: item.id)
                            }
                    }
                    .accessibility(label: Text("Refresh"))
                    .accessibility(identifier: "Refresh")
                }
            }
            HStack {
                Spacer()
                Text("Add")
                    .onTapGesture {
                        publisher.addItem()
                    }
                Spacer()
            }
        }
...
